analisador_sintatico.output
Terminals unused in grammar

   token_pr_nao
   token_incrementador
   token_til
   token_aspas_dupla
   token_aspas_simples
   token_abre_chaves
   token_fecha_chaves
   token_tralha
   token_contra_barra
   token_ponto
   token_desconhecido


Grammar

    0 $accept: algoritmo $end

    1 algoritmo: declaracao_algoritmo declacarao_funcoes bloco_variaveis bloco_inicio
    2          | declaracao_algoritmo bloco_variaveis bloco_inicio

    3 declaracao_algoritmo: token_pr_algoritmo token_identificador token_ponto_virgula

    4 bloco_variaveis: token_pr_variaveis declaracao_variaveis token_pr_fim_variaveis
    5                | token_pr_variaveis token_pr_fim_variaveis
    6                | /* empty */

    7 declaracao_variaveis: lista_variaveis token_dois_pontos tipo_variavel token_ponto_virgula
    8                     | declaracao_variaveis lista_variaveis token_dois_pontos tipo_variavel token_ponto_virgula

    9 tipo_variavel: tipo_primitivo
   10              | tipo_matriz

   11 lista_variaveis: lista_variaveis token_virgula token_identificador
   12                | token_identificador

   13 tipo_primitivo: token_pr_inteiro
   14               | token_pr_real
   15               | token_pr_caractere
   16               | token_pr_literal
   17               | token_pr_logico

   18 tipo_matriz: token_pr_matriz matriz_colchetes token_pr_de tipo_primitivo_plural

   19 matriz_colchetes: matriz_colchetes token_abre_colchetes token_inteiro token_fecha_colchetes
   20                 | token_abre_colchetes token_inteiro token_fecha_colchetes

   21 tipo_primitivo_plural: token_pr_inteiros
   22                      | token_pr_reais
   23                      | token_pr_caracteres
   24                      | token_pr_literais
   25                      | token_pr_logicos

   26 bloco_inicio: token_pr_inicio lista_comandos token_pr_fim
   27             | token_pr_inicio token_pr_fim

   28 lista_comandos: lista_comandos comando
   29               | comando

   30 comando: atribuicao
   31        | chamada_funcao token_ponto_virgula
   32        | chamada_funcao_interna
   33        | comando_retorne
   34        | comando_se
   35        | comando_enquanto
   36        | comando_para
   37        | comando_escolha

   38 valor_esquerda: token_identificador
   39               | token_identificador matriz_colchetes

   40 atribuicao: valor_esquerda token_atribuicao expressao token_ponto_virgula

   41 comando_retorne: token_pr_retorne token_ponto_virgula
   42                | token_pr_retorne expressao token_ponto_virgula

   43 comando_escolha: token_pr_escolha token_abre_parenteses token_identificador token_fecha_parenteses casos token_pr_fim_escolha

   44 casos: casos caso
   45      | caso

   46 caso: token_pr_caso valor_primitivo token_dois_pontos lista_comandos token_pr_para token_ponto_virgula
   47     | token_pr_caso valor_primitivo token_dois_pontos token_pr_para token_ponto_virgula
   48     | token_pr_default token_dois_pontos lista_comandos token_pr_para token_ponto_virgula

   49 comando_se: token_pr_se expressao token_pr_entao lista_comandos token_pr_fim_se
   50           | token_pr_se expressao token_pr_entao lista_comandos token_pr_senao lista_comandos token_pr_fim_se

   51 comando_enquanto: token_pr_enquanto expressao token_pr_faca lista_comandos token_pr_fim_enquanto

   52 comando_para: token_pr_para valor_esquerda token_pr_de expressao token_pr_ate expressao token_pr_faca lista_comandos token_pr_fim_para
   53             | token_pr_para valor_esquerda token_pr_de expressao token_pr_ate expressao passo token_pr_faca lista_comandos token_pr_fim_para

   54 passo: token_pr_passo token_inteiro
   55      | token_pr_passo token_soma token_inteiro
   56      | token_pr_passo token_subtracao token_inteiro

   57 expressao: expressao token_pr_ou termo_1
   58          | expressao token_ou termo_1
   59          | termo_1

   60 termo_1: termo_1 token_pr_e termo_2
   61        | termo_1 token_e termo_2
   62        | termo_2

   63 termo_2: termo_2 token_ou_bit termo_3
   64        | termo_3

   65 termo_3: termo_3 token_xor_bit termo_4
   66        | termo_4

   67 termo_4: termo_4 token_e_bit termo_5
   68        | termo_5

   69 termo_5: termo_5 token_igual termo_6
   70        | termo_5 token_diferente termo_6
   71        | termo_6

   72 termo_6: termo_6 token_menor termo_7
   73        | termo_6 token_menor_igual termo_7
   74        | termo_6 token_maior termo_7
   75        | termo_6 token_maior_igual termo_7
   76        | termo_7

   77 termo_7: termo_7 token_soma termo_8
   78        | termo_7 token_subtracao termo_8
   79        | termo_8

   80 termo_8: termo_8 token_multiplicacao termo_9
   81        | termo_8 token_divisao termo_9
   82        | termo_8 token_modulo termo_9
   83        | termo_9

   84 termo_9: token_soma termo_9
   85        | token_subtracao termo_9
   86        | token_nao termo_9
   87        | token_abre_parenteses expressao token_fecha_parenteses
   88        | token_identificador
   89        | valor_primitivo
   90        | chamada_funcao
   91        | chamada_funcao_interna

   92 valor_primitivo: token_literal
   93                | token_inteiro
   94                | token_real
   95                | token_caractere
   96                | token_pr_verdadeiro
   97                | token_pr_falso

   98 chamada_funcao: token_identificador token_abre_parenteses paramentros_chamada_funcao token_fecha_parenteses
   99               | token_identificador token_abre_parenteses token_fecha_parenteses

  100 chamada_funcao_interna: token_pr_imprima token_abre_parenteses paramentros_chamada_funcao token_fecha_parenteses token_ponto_virgula
  101                       | token_pr_leia token_abre_parenteses paramentros_chamada_funcao token_fecha_parenteses token_ponto_virgula
  102                       | token_pr_leia_ln token_abre_parenteses paramentros_chamada_funcao token_fecha_parenteses token_ponto_virgula
  103                       | token_pr_imprima_ln token_abre_parenteses paramentros_chamada_funcao token_fecha_parenteses token_ponto_virgula
  104                       | token_pr_maximo token_abre_parenteses paramentros_chamada_funcao token_fecha_parenteses
  105                       | token_pr_minimo token_abre_parenteses paramentros_chamada_funcao token_fecha_parenteses
  106                       | token_pr_media token_abre_parenteses paramentros_chamada_funcao token_fecha_parenteses

  107 paramentros_chamada_funcao: paramentros_chamada_funcao token_virgula expressao
  108                           | expressao

  109 declacarao_funcoes: declacarao_funcoes declaracao_funcao
  110                   | declaracao_funcao

  111 declaracao_funcao: token_pr_funcao token_identificador paramentros_funcao_parenteses token_dois_pontos tipo_primitivo bloco_inicio token_pr_fim_funcao
  112                  | token_pr_funcao token_identificador paramentros_funcao_parenteses bloco_inicio token_pr_fim_funcao

  113 paramentros_funcao_parenteses: token_abre_parenteses paramentros_funcao token_fecha_parenteses
  114                              | token_abre_parenteses token_fecha_parenteses

  115 paramentros_funcao: paramentros_funcao token_virgula paramentro_funcao
  116                   | paramentro_funcao

  117 paramentro_funcao: token_identificador token_dois_pontos tipo_primitivo
  118                  | token_identificador token_dois_pontos tipo_matriz


Terminals, with rules where they appear

$end (0) 0
error (256)
token_pr_algoritmo (258) 3
token_pr_variaveis (259) 4 5
token_pr_fim_variaveis (260) 4 5
token_pr_inicio (261) 26 27
token_pr_fim (262) 26 27
token_pr_inteiro (263) 13
token_pr_inteiros (264) 21
token_pr_caractere (265) 15
token_pr_caracteres (266) 23
token_pr_real (267) 14
token_pr_reais (268) 22
token_pr_literal (269) 16
token_pr_literais (270) 24
token_pr_logico (271) 17
token_pr_logicos (272) 25
token_pr_matriz (273) 18
token_pr_se (274) 49 50
token_pr_entao (275) 49 50
token_pr_senao (276) 50
token_pr_fim_se (277) 49 50
token_pr_para (278) 46 47 48 52 53
token_pr_de (279) 18 52 53
token_pr_ate (280) 52 53
token_pr_faca (281) 51 52 53
token_pr_passo (282) 54 55 56
token_pr_fim_para (283) 52 53
token_pr_enquanto (284) 51
token_pr_fim_enquanto (285) 51
token_pr_imprima (286) 100
token_pr_leia (287) 101
token_pr_imprima_ln (288) 103
token_pr_leia_ln (289) 102
token_pr_maximo (290) 104
token_pr_minimo (291) 105
token_pr_media (292) 106
token_pr_funcao (293) 111 112
token_pr_retorne (294) 41 42
token_pr_verdadeiro (295) 96
token_pr_falso (296) 97
token_pr_e (297) 60
token_pr_ou (298) 57
token_pr_nao (299)
token_inteiro (300) 19 20 54 55 56 93
token_real (301) 94
token_caractere (302) 95
token_literal (303) 92
token_soma (304) 55 77 84
token_subtracao (305) 56 78 85
token_divisao (306) 81
token_multiplicacao (307) 80
token_incrementador (308)
token_modulo (309) 82
token_maior (310) 74
token_maior_igual (311) 75
token_menor (312) 72
token_menor_igual (313) 73
token_igual (314) 69
token_diferente (315) 70
token_e (316) 61
token_e_bit (317) 67
token_ou (318) 58
token_ou_bit (319) 63
token_xor_bit (320) 65
token_til (321)
token_nao (322) 86
token_aspas_dupla (323)
token_aspas_simples (324)
token_abre_parenteses (325) 43 87 98 99 100 101 102 103 104 105 106
    113 114
token_fecha_parenteses (326) 43 87 98 99 100 101 102 103 104 105 106
    113 114
token_abre_chaves (327)
token_fecha_chaves (328)
token_abre_colchetes (329) 19 20
token_fecha_colchetes (330) 19 20
token_tralha (331)
token_contra_barra (332)
token_ponto (333)
token_virgula (334) 11 107 115
token_dois_pontos (335) 7 8 46 47 48 111 117 118
token_ponto_virgula (336) 3 7 8 31 40 41 42 46 47 48 100 101 102 103
token_atribuicao (337) 40
token_identificador (338) 3 11 12 38 39 43 88 98 99 111 112 117 118
token_desconhecido (339)
token_pr_fim_funcao (340) 111 112
token_pr_escolha (341) 43
token_pr_caso (342) 46 47
token_pr_fim_escolha (343) 43
token_pr_default (344) 48


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
algoritmo (91)
    on left: 1 2, on right: 0
declaracao_algoritmo (92)
    on left: 3, on right: 1 2
bloco_variaveis (93)
    on left: 4 5 6, on right: 1 2
declaracao_variaveis (94)
    on left: 7 8, on right: 4 8
tipo_variavel (95)
    on left: 9 10, on right: 7 8
lista_variaveis (96)
    on left: 11 12, on right: 7 8 11
tipo_primitivo (97)
    on left: 13 14 15 16 17, on right: 9 111 117
tipo_matriz (98)
    on left: 18, on right: 10 118
matriz_colchetes (99)
    on left: 19 20, on right: 18 19 39
tipo_primitivo_plural (100)
    on left: 21 22 23 24 25, on right: 18
bloco_inicio (101)
    on left: 26 27, on right: 1 2 111 112
lista_comandos (102)
    on left: 28 29, on right: 26 28 46 48 49 50 51 52 53
comando (103)
    on left: 30 31 32 33 34 35 36 37, on right: 28 29
valor_esquerda (104)
    on left: 38 39, on right: 40 52 53
atribuicao (105)
    on left: 40, on right: 30
comando_retorne (106)
    on left: 41 42, on right: 33
comando_escolha (107)
    on left: 43, on right: 37
casos (108)
    on left: 44 45, on right: 43 44
caso (109)
    on left: 46 47 48, on right: 44 45
comando_se (110)
    on left: 49 50, on right: 34
comando_enquanto (111)
    on left: 51, on right: 35
comando_para (112)
    on left: 52 53, on right: 36
passo (113)
    on left: 54 55 56, on right: 53
expressao (114)
    on left: 57 58 59, on right: 40 42 49 50 51 52 53 57 58 87 107
    108
termo_1 (115)
    on left: 60 61 62, on right: 57 58 59 60 61
termo_2 (116)
    on left: 63 64, on right: 60 61 62 63
termo_3 (117)
    on left: 65 66, on right: 63 64 65
termo_4 (118)
    on left: 67 68, on right: 65 66 67
termo_5 (119)
    on left: 69 70 71, on right: 67 68 69 70
termo_6 (120)
    on left: 72 73 74 75 76, on right: 69 70 71 72 73 74 75
termo_7 (121)
    on left: 77 78 79, on right: 72 73 74 75 76 77 78
termo_8 (122)
    on left: 80 81 82 83, on right: 77 78 79 80 81 82
termo_9 (123)
    on left: 84 85 86 87 88 89 90 91, on right: 80 81 82 83 84 85 86
valor_primitivo (124)
    on left: 92 93 94 95 96 97, on right: 46 47 89
chamada_funcao (125)
    on left: 98 99, on right: 31 90
chamada_funcao_interna (126)
    on left: 100 101 102 103 104 105 106, on right: 32 91
paramentros_chamada_funcao (127)
    on left: 107 108, on right: 98 100 101 102 103 104 105 106 107
declacarao_funcoes (128)
    on left: 109 110, on right: 1 109
declaracao_funcao (129)
    on left: 111 112, on right: 109 110
paramentros_funcao_parenteses (130)
    on left: 113 114, on right: 111 112
paramentros_funcao (131)
    on left: 115 116, on right: 113 115
paramentro_funcao (132)
    on left: 117 118, on right: 115 116


state 0

    0 $accept: . algoritmo $end

    token_pr_algoritmo  shift, and go to state 1

    algoritmo             go to state 2
    declaracao_algoritmo  go to state 3


state 1

    3 declaracao_algoritmo: token_pr_algoritmo . token_identificador token_ponto_virgula

    token_identificador  shift, and go to state 4


state 2

    0 $accept: algoritmo . $end

    $end  shift, and go to state 5


state 3

    1 algoritmo: declaracao_algoritmo . declacarao_funcoes bloco_variaveis bloco_inicio
    2          | declaracao_algoritmo . bloco_variaveis bloco_inicio

    token_pr_variaveis  shift, and go to state 6
    token_pr_funcao     shift, and go to state 7

    $default  reduce using rule 6 (bloco_variaveis)

    bloco_variaveis     go to state 8
    declacarao_funcoes  go to state 9
    declaracao_funcao   go to state 10


state 4

    3 declaracao_algoritmo: token_pr_algoritmo token_identificador . token_ponto_virgula

    token_ponto_virgula  shift, and go to state 11


state 5

    0 $accept: algoritmo $end .

    $default  accept


state 6

    4 bloco_variaveis: token_pr_variaveis . declaracao_variaveis token_pr_fim_variaveis
    5                | token_pr_variaveis . token_pr_fim_variaveis

    token_pr_fim_variaveis  shift, and go to state 12
    token_identificador     shift, and go to state 13

    declaracao_variaveis  go to state 14
    lista_variaveis       go to state 15


state 7

  111 declaracao_funcao: token_pr_funcao . token_identificador paramentros_funcao_parenteses token_dois_pontos tipo_primitivo bloco_inicio token_pr_fim_funcao
  112                  | token_pr_funcao . token_identificador paramentros_funcao_parenteses bloco_inicio token_pr_fim_funcao

    token_identificador  shift, and go to state 16


state 8

    2 algoritmo: declaracao_algoritmo bloco_variaveis . bloco_inicio

    token_pr_inicio  shift, and go to state 17

    bloco_inicio  go to state 18


state 9

    1 algoritmo: declaracao_algoritmo declacarao_funcoes . bloco_variaveis bloco_inicio
  109 declacarao_funcoes: declacarao_funcoes . declaracao_funcao

    token_pr_variaveis  shift, and go to state 6
    token_pr_funcao     shift, and go to state 7

    $default  reduce using rule 6 (bloco_variaveis)

    bloco_variaveis    go to state 19
    declaracao_funcao  go to state 20


state 10

  110 declacarao_funcoes: declaracao_funcao .

    $default  reduce using rule 110 (declacarao_funcoes)


state 11

    3 declaracao_algoritmo: token_pr_algoritmo token_identificador token_ponto_virgula .

    $default  reduce using rule 3 (declaracao_algoritmo)


state 12

    5 bloco_variaveis: token_pr_variaveis token_pr_fim_variaveis .

    $default  reduce using rule 5 (bloco_variaveis)


state 13

   12 lista_variaveis: token_identificador .

    $default  reduce using rule 12 (lista_variaveis)


state 14

    4 bloco_variaveis: token_pr_variaveis declaracao_variaveis . token_pr_fim_variaveis
    8 declaracao_variaveis: declaracao_variaveis . lista_variaveis token_dois_pontos tipo_variavel token_ponto_virgula

    token_pr_fim_variaveis  shift, and go to state 21
    token_identificador     shift, and go to state 13

    lista_variaveis  go to state 22


state 15

    7 declaracao_variaveis: lista_variaveis . token_dois_pontos tipo_variavel token_ponto_virgula
   11 lista_variaveis: lista_variaveis . token_virgula token_identificador

    token_virgula      shift, and go to state 23
    token_dois_pontos  shift, and go to state 24


state 16

  111 declaracao_funcao: token_pr_funcao token_identificador . paramentros_funcao_parenteses token_dois_pontos tipo_primitivo bloco_inicio token_pr_fim_funcao
  112                  | token_pr_funcao token_identificador . paramentros_funcao_parenteses bloco_inicio token_pr_fim_funcao

    token_abre_parenteses  shift, and go to state 25

    paramentros_funcao_parenteses  go to state 26


state 17

   26 bloco_inicio: token_pr_inicio . lista_comandos token_pr_fim
   27             | token_pr_inicio . token_pr_fim

    token_pr_fim         shift, and go to state 27
    token_pr_se          shift, and go to state 28
    token_pr_para        shift, and go to state 29
    token_pr_enquanto    shift, and go to state 30
    token_pr_imprima     shift, and go to state 31
    token_pr_leia        shift, and go to state 32
    token_pr_imprima_ln  shift, and go to state 33
    token_pr_leia_ln     shift, and go to state 34
    token_pr_maximo      shift, and go to state 35
    token_pr_minimo      shift, and go to state 36
    token_pr_media       shift, and go to state 37
    token_pr_retorne     shift, and go to state 38
    token_identificador  shift, and go to state 39
    token_pr_escolha     shift, and go to state 40

    lista_comandos          go to state 41
    comando                 go to state 42
    valor_esquerda          go to state 43
    atribuicao              go to state 44
    comando_retorne         go to state 45
    comando_escolha         go to state 46
    comando_se              go to state 47
    comando_enquanto        go to state 48
    comando_para            go to state 49
    chamada_funcao          go to state 50
    chamada_funcao_interna  go to state 51


state 18
